--- a/index.html
+++ b/index.html
@@ -671,7 +671,7 @@
         s.innerHTML = `
 								
 							<div class="image-container">
-								<a id="oyunlink" data-cevap="${e}" data-name="${h}" title="Fotoğraf bozuk ise üsteki 🐺 butonuna tıkla" href="https://wolkanca.com/terorist-tanima-terorist-testi-oyunu-terorist-quiz/#oyun">
+								<a id="oyunlink" data-cevap="${e}" data-name="${h}" title="Fotoğraf bozuk ise üsteki 🐺 butonuna tıkla" href="#oyun">
 									<img decoding="async" src="${c}" height="300" width="580" id="trrimg" style="--background: url('${l}')" onerror="this.classList.add('error');this.src='${c}?'"/>
 								</a>
 							</div>
