og/x meta and analytics. Update index.html
og, twiter metas and analytics added.

--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
     <meta property="og:url" content="https://wolkanca.com/terorist-tanima-terorist-testi-oyunu-terorist-quiz/">
     <link rel="canonical" href="https://wolkanca.com/terorist-tanima-terorist-testi-oyunu-terorist-quiz/">
     <meta property="og:image" content="https://github.com/wolkanca/redlist-quiz/assets/480403/58550eac-98e0-4aa4-a829-5f641235d8c3">
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:site" content="@wolkanca">
+    <meta name="twitter:creator" content="@wolkanca">
     <style>
       :root {
         --la: #f2f2f2;
