--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta id="viewport" name="viewport" content="width=device-width,initial-scale=1.0,viewport-fit=cover">
     <title>Terrorist Quiz</title>
     <link rel="dns-prefetch" href="//i0.wp.com">
+    <link rel="dns-prefetch" href="//www.terorarananlar.pol.tr">
     <link rel="preconnect" href="//fonts.gstatic.com" crossorigin>
     <meta property="og:title" content="Terörist tanıma, terörist testi oyunu: terorist-quiz">
     <meta property="og:description" content="Terör örgütü bulma oyunu. Terörden arananlar listesi oyunu: terörist quiz. - Terörist tanıma, terörist testi oyunu: terorist-quiz Oyun, Terörist, Test">
@@ -838,17 +839,6 @@
         $(".michaelsikkofield").on("click", (function(e) {
           $(".d0rucvp").click()
         }));
-        $(".featured-media").click(function(e) {
-          e.stopPropagation();
-          e.preventDefault();
-          window.location = "#oyun"
-        });
-        $("#guncelleme1.nhvr").after(' < span class = "devami" >< a href = "javascript://" > Devamı... < /a>< /span>');
-        $("span.devami>a").click(function() {
-          $('#guncelleme1').addClass("hvr");
-          $('#guncelleme1').removeClass("nhvr");
-          $(this).remove()
-        });
       }));
     </script>
     <script defer src="https://eu.umami.is/script.js" data-website-id="1765a6e8-0636-4459-b4f6-a24a80807688"></script>
