--- a/index.html
+++ b/index.html
@@ -43,8 +43,7 @@
         --col2: #787d85;
         --bg2: #fcfcfc;
         --brd2: #e0e1e1;
-        --fft: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Ubuntu, Helvetica Neue, sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol;
-        --ffh: Inter, system-ui;
+        --font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Ubuntu, Helvetica Neue, sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol;
       }
 
       @media(prefers-color-scheme: light) {
@@ -80,114 +79,6 @@
         }
       }
 
-      @font-face {
-        font-family: Inter;
-        font-style: normal;
-        font-weight: 400;
-        font-display: swap;
-        src: url(//fonts.gstatic.com/s/inter/v2/UcC73FwrK3iLTeHuS_fvQtMwCp50KnMa25L7SUc.woff2) format('woff2');
-        unicode-range: U+0100-024F, U+0259, U+1E00-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF
-      }
-
-      @font-face {
-        font-family: Inter;
-        font-style: normal;
-        font-weight: 400;
-        font-display: swap;
-        src: url(//fonts.gstatic.com/s/inter/v2/UcC73FwrK3iLTeHuS_fvQtMwCp50KnMa1ZL7.woff2) format('woff2');
-        unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD
-      }
-
-      @font-face {
-        font-family: Inter;
-        font-style: normal;
-        font-weight: 500;
-        font-display: swap;
-        src: url(//fonts.gstatic.com/s/inter/v2/UcC73FwrK3iLTeHuS_fvQtMwCp50KnMa25L7SUc.woff2) format('woff2');
-        unicode-range: U+0100-024F, U+0259, U+1E00-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF
-      }
-
-      @font-face {
-        font-family: Inter;
-        font-style: normal;
-        font-weight: 500;
-        font-display: swap;
-        src: url(//fonts.gstatic.com/s/inter/v2/UcC73FwrK3iLTeHuS_fvQtMwCp50KnMa1ZL7.woff2) format('woff2');
-        unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD
-      }
-
-      @font-face {
-        font-family: Inter;
-        font-style: normal;
-        font-weight: 600;
-        font-display: swap;
-        src: url(//fonts.gstatic.com/s/inter/v2/UcC73FwrK3iLTeHuS_fvQtMwCp50KnMa25L7SUc.woff2) format('woff2');
-        unicode-range: U+0100-024F, U+0259, U+1E00-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF
-      }
-
-      @font-face {
-        font-family: Inter;
-        font-style: normal;
-        font-weight: 600;
-        font-display: swap;
-        src: url(//fonts.gstatic.com/s/inter/v2/UcC73FwrK3iLTeHuS_fvQtMwCp50KnMa1ZL7.woff2) format('woff2');
-        unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD
-      }
-
-      @font-face {
-        font-family: Inter;
-        font-style: normal;
-        font-weight: 700;
-        font-display: swap;
-        src: url(//fonts.gstatic.com/s/inter/v2/UcC73FwrK3iLTeHuS_fvQtMwCp50KnMa25L7SUc.woff2) format('woff2');
-        unicode-range: U+0100-024F, U+0259, U+1E00-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF
-      }
-
-      @font-face {
-        font-family: Inter;
-        font-style: normal;
-        font-weight: 700;
-        font-display: swap;
-        src: url(//fonts.gstatic.com/s/inter/v2/UcC73FwrK3iLTeHuS_fvQtMwCp50KnMa1ZL7.woff2) format('woff2');
-        unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD
-      }
-
-      @font-face {
-        font-family: Inter;
-        font-style: normal;
-        font-weight: 800;
-        font-display: swap;
-        src: url(//fonts.gstatic.com/s/inter/v2/UcC73FwrK3iLTeHuS_fvQtMwCp50KnMa25L7SUc.woff2) format('woff2');
-        unicode-range: U+0100-024F, U+0259, U+1E00-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF
-      }
-
-      @font-face {
-        font-family: Inter;
-        font-style: normal;
-        font-weight: 800;
-        font-display: swap;
-        src: url(//fonts.gstatic.com/s/inter/v2/UcC73FwrK3iLTeHuS_fvQtMwCp50KnMa1ZL7.woff2) format('woff2');
-        unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD
-      }
-
-      @font-face {
-        font-family: Inter;
-        font-style: normal;
-        font-weight: 900;
-        font-display: swap;
-        src: url(//fonts.gstatic.com/s/inter/v2/UcC73FwrK3iLTeHuS_fvQtMwCp50KnMa25L7SUc.woff2) format('woff2');
-        unicode-range: U+0100-024F, U+0259, U+1E00-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF
-      }
-
-      @font-face {
-        font-family: Inter;
-        font-style: normal;
-        font-weight: 900;
-        font-display: swap;
-        src: url(//fonts.gstatic.com/s/inter/v2/UcC73FwrK3iLTeHuS_fvQtMwCp50KnMa1ZL7.woff2) format('woff2');
-        unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD
-      }
-
       html {
         font-size: 62.5%;
         min-width: 310px;
@@ -206,7 +97,7 @@
       body {
         color: var(--renk);
         box-sizing: border-box;
-        font-family: var(--ffh);
+        font-family: var(--font-family);
         font-size: 1.8rem;
         letter-spacing: -.015em;
         text-align: left;
@@ -245,7 +136,7 @@
       }
 
       #trr {
-        font-family: var(--fft);
+        font-family: var(--font-family);
         letter-spacing: inherit;
         text-align: center;
         display: block;
