--- a/index.html
+++ b/index.html
@@ -45,7 +45,6 @@
         --brd2: #e0e1e1;
         --font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Ubuntu, Helvetica Neue, sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol;
       }
-
       @media(prefers-color-scheme: light) {
         :root {
           --arka: var(--la);
@@ -61,7 +60,6 @@
           --yesil: var(--ly)
         }
       }
-
       @media(prefers-color-scheme: dark) {
         :root {
           color-scheme: dark;
@@ -78,14 +76,12 @@
           --yesil: var(--dy)
         }
       }
-
       html {
         font-size: 62.5%;
         min-width: 310px;
         accent-color: var(--accent);
         scroll-behavior: smooth
       }
-
       html,
       body {
         border: none;
@@ -93,7 +89,6 @@
         padding: 0;
         background-color: var(--hefot);
       }
-
       body {
         color: var(--renk);
         box-sizing: border-box;
@@ -102,18 +97,15 @@
         letter-spacing: -.015em;
         text-align: left;
       }
-
       a {
         color: var(--link);
         text-decoration-line: underline;
         text-decoration-color: var(--col2)
       }
-
       a:hover,
       a:focus {
         text-decoration: none
       }
-
       button {
         appearance: none;
         background: var(--accent);
@@ -134,7 +126,6 @@
         text-transform: uppercase;
         transition: opacity .15s linear;
       }
-
       #trr {
         font-family: var(--font-family);
         letter-spacing: inherit;
@@ -145,7 +136,6 @@
         padding: 0;
         width: 100%;
       }
-
       #trr .answer-button,
       #trr #reset-button {
         color: #fff;
@@ -153,7 +143,6 @@
         flex: auto;
         font-size: small;
       }
-
       #trr .answer-button {
         font-size: initial;
         line-height: 1;
@@ -165,18 +154,15 @@
         color: var(--renk);
         border: 1px dashed var(--col2);
       }
-
       #trr .answer-button:hover {
         border-color: var(--accent);
       }
-
       #trr #reset-button {
         font-size: x-small;
         background: red;
         flex-grow: 0;
         margin-right: 10%;
       }
-
       #trr #quiz-container img {
         margin: auto;
         width: 100%;
@@ -184,7 +170,6 @@
         display: block;
         min-height: 300px;
       }
-
       #trr .abuttons {
         display: flex;
         gap: 0.5rem;
@@ -194,25 +179,19 @@
         justify-content: center;
         align-items: center;
       }
-
       #trr #quiz-container {
-        position: relative;
         min-height: 465px;
         overflow: hidden;
       }
-
       #trr h2 {
         margin-top: 0;
       }
-
       #trr h3 {
         margin: 1rem auto;
       }
-
       #trr h4 {
         margin: 0;
       }
-
       #siviller {
         display: flex;
         flex-direction: row;
@@ -223,7 +202,6 @@
         gap: 1rem;
         margin: 2rem auto 3rem;
       }
-
       #trr .container {
         position: relative;
         overflow: hidden;
@@ -236,12 +214,10 @@
         border-radius: 1rem;
         background: var(--hefot);
       }
-
       #trr .image-container img {
         height: 300px;
         aspect-ratio: 3 / 4;
       }
-
       #trr .scoreboard {
         margin: 1rem auto;
         background: var(--arka);
@@ -256,7 +232,6 @@
         justify-content: center;
         align-items: center;
       }
-
       #trr .switch {
         position: relative;
         display: inline-block;
@@ -265,13 +240,11 @@
         zoom: 0.5;
         margin-top: 0.1rem;
       }
-
       #trr .switch input {
         opacity: 0;
         width: 0;
         height: 0;
       }
-
       #trr .slider {
         position: absolute;
         cursor: pointer;
@@ -283,7 +256,6 @@
         -webkit-transition: 0.4s;
         transition: 0.4s;
       }
-
       #trr .slider:before {
         position: absolute;
         content: "";
@@ -295,29 +267,23 @@
         -webkit-transition: 0.4s;
         transition: 0.4s;
       }
-
       #trr input:checked+.slider {
         background-color: #2196f3;
       }
-
       #trr input:focus+.slider {
         box-shadow: 0 0 1px #2196f3;
       }
-
       #trr input:checked+.slider:before {
         -webkit-transform: translateX(26px);
         -ms-transform: translateX(26px);
         transform: translateX(26px);
       }
-
       #trr .slider.round {
         border-radius: 34px;
       }
-
       #trr .slider.round:before {
         border-radius: 50%;
       }
-
       #trr .about {
         font-size: small;
         float: right;
@@ -330,56 +296,45 @@
         background: var(--arka);
         padding: 1rem;
       }
-
       #trr .about p {
         font-size: smaller;
       }
-
       #trr .about summary {
         cursor: pointer;
       }
-
       #trr .about summary:first-of-type {
         list-style-type: "❓";
       }
-
       #scoreboard>span>strong {
         font-size: 2.5rem;
         display: inline-block;
         vertical-align: text-bottom;
         line-height: 1;
       }
-
       #scoreboard>span:first-child>strong,
       .d0ru>span:first-child>strong {
         color: green;
       }
-
       #scoreboard>span:not(:first-child)>strong,
       .naud0ru>span:not(:first-child)>strong {
         color: red;
       }
-
       html.swal2-shown,
       html.swal2-shown>body {
         background: var(--arka);
       }
-
       .swal2-show {
         transform: scale(1.2);
       }
-
       @media (min-width: 700px) {
         .swal2-show {
           zoom: 1.2;
         }
       }
-
       div:where(.swal2-container) .swal2-html-container>small {
         display: block;
         width: 100%;
       }
-
       #trr a.opyls {
         position: absolute;
         left: 0;
@@ -391,18 +346,15 @@
         z-index: 19;
         border-bottom: 1px solid var(--accent);
       }
-
       #trr details.about[open] {
         z-index: 20 !important;
       }
-
       #trrimg {
         background-image: var(--background);
         background-size: contain;
         background-repeat: no-repeat;
         background-position: center;
       }
-
       #trr .michaelsikkofield {
         position: absolute;
         right: 0;
@@ -414,11 +366,9 @@
         border-radius: 0 1rem;
         font-size: 3rem;
       }
-
       #trr .michaelsikkofield:hover {
         backdrop-filter: contrast(0.5);
       }
-
       #trr .michaelsikkofield:hover:after {
         position: absolute;
         right: 0;
@@ -438,8 +388,7 @@
   <body>
     <figure id="trr">
       <div class="container">
-        <h2 class="has-small-font-size">Terrorist Quiz <a class="michaelsikkofield" id="kurt" href="javascript://" title="michaelsikkofield fix">🐺</a>
-        </h2>
+        <h2 class="has-small-font-size">Terrorist Quiz</h2>
         <div id="quiz-container"></div>
         <div id="scoreboard" class="scoreboard">
           <span>Doğru: <strong>0</strong>
@@ -456,7 +405,7 @@
         </div>
         <details class="about">
           <summary>Hakkında</summary>
-          <p>Veriler herkese açık olarak yayınlanan <a href="https://web.archive.org/web/20240000000000*/https://www.terorarananlar.pol.tr/tarananlar/" rel="noopener" target="_blank">T.C. İçişleri Bakanlığı Terör Arananlar</a> listesinden alınmaktadır. Sivillerin fotoğrafları yapay zeka ile insan fotoğrafı üreten <a href="https://web.archive.org/web/20240308002349/https://thispersondoesnotexist.com/" rel="noopener" target="_blank">thispersondoesnotexist.com</a> adresinden alınmaktadır.
+          <p>Veriler herkese açık olarak yayınlanan <a href="https://web.archive.org/web/20240000000000*/https://www.terorarananlar.pol.tr/tarananlar/" rel="noopener" target="_blank">T.C. İçişleri Bakanlığı Terör Arananlar</a> listesinden alınmaktadır. Sivillerin fotoğrafları yapay zeka ile insan fotoğrafı üreten <a href="https://web.archive.org/web/20240308002349/https://thispersondoesnotexist.com/" rel="noopener" target="_blank">thispersondoesnotexist.com</a> adresinden alınmaktadır.</p>
         </details>
         <a class="opyls" href="https://wolkanca.com/terorist-tanima-terorist-testi-oyunu-terorist-quiz/#paylas">Paylaş</a>
       </div>
@@ -493,7 +442,6 @@
       } else if (localStorage.getItem("Civilians") === "0") {
         siviller_ekleme();
       }
-
       function toggleIncludeCivilians() {
         inpt.classList.toggle('Civilians');
         let val = inpt.classList.contains("Civilians") ? "1" : "0";
@@ -566,21 +514,19 @@
         const o = [e, ...a].sort((() => Math.random() - .5)),
           s = document.getElementById("quiz-container");
         let l = n.IlkGorselURL,
-          c = l.replace(/(https?:\/\/)(.*?)(:*)/g, "$1i0.wp.com/$3"),
+          c = l.replace(/(https?:\/\/)(www\..*?)(:*)/g, "$1i0.wp.com/$3"),
           h = l.split("/").pop().split(".")[0];
         l.substring(0, l.length - 1);
-        s.innerHTML = `<div class="image-container">
+        s.innerHTML = `<a class="michaelsikkofield" onclick="checkAnswer('${e}','${e}')" href="javascript://" title="michaelsikkofield fix">🐺</a>
+				<div class="image-container">
 					<a id="oyunlink" data-name="${h}" title="Fotoğraf bozuk ise üsteki 🐺 butonuna tıkla" href="#trr">
-						<img decoding="async" src="${c}" height="300" width="580" id="trrimg" style="--background: url('${l}')" onerror="this.classList.add('error');this.src='${c}?'"/>
+						<img decoding="async" src="${c}" height="300" width="580" id="trrimg" style="--background: url('${l}')" onerror="this.classList.add('error');this.src='${c}?';this.onerror=null"/>
 					</a>
 				</div>
 				<h3 class="has-small-font-size">Hangi örgüt?</h3>
 				<div class="abuttons">${o.map((t=>`
 					<button class="answer-button" onclick="checkAnswer('${e}','${t}')" id="${t}">${t}</button>`)).join("")}
 				</div>`;
-        document.getElementById("kurt").addEventListener("click", function(o) {
-          checkAnswer(e, e);
-        });
       }
       async function checkQuestionCount() {
         totalQuestionsAnswered++;
@@ -618,12 +564,11 @@
           displayQuiz();
         }
       }
-
       function checkAnswer(correctAnswer, selectedAnswer) {
         if (selectedAnswer === correctAnswer) {
           Swal.fire({
             icon: 'success',
-            html: `<span style="position:absolute;top:0;left:0;width:100%;margin:1rem auto;font-size:.8rem"><strong>${correctAnswer}</strong></span> Bravo! <small class="d0ru"><span>Doğru:<strong>${correctScore+1}</strong></span> | <span>Yanlış: <strong>${incorrectScore}</strong></span></small>`,
+            html: `<span style="position:absolute;top:0;left:0;width:100%;margin:1rem auto;font-size:.8rem"><strong>${correctAnswer}</strong></span> Bravo! <small class="d0ru"><span>Doğru: <strong>${correctScore+1}</strong></span> | <span>Yanlış: <strong>${incorrectScore}</strong></span></small>`,
             confirmButtonText: 'Devam',
           }).then((result) => {
             correctScore++;
@@ -642,7 +587,6 @@
           });
         }
       }
-
       function updateScoreboard() {
         const scoreboard = document.getElementById('scoreboard');
         scoreboard.innerHTML = `<span>Doğru: <strong>${correctScore}</strong></span> | <span>Yanlış: <strong>${incorrectScore}</strong></span>`;
