Google Lighthouse, Accessibility -  Update index.html
Google Lighthouse, Accessibility

--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
       }
       #trr #reset-button {
         font-size: x-small;
-        background: var(--accent);
+        background: var(--kirmizi);
         flex-grow: 0;
         margin-right: 10%;
       }
