dark mode fix. Update index.html
dark mode fix.

--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
         padding: 3vh 0.3vw;
         width: 58rem;
         max-width: 100%;
-        min-height: 73rem;
+        min-height: 70rem;
         border: 1px solid var(--col2);
         border-radius: 1rem;
         background: var(--hefot);
@@ -382,6 +382,12 @@
         display: block;
         width: 9rem;
         margin-right: 6rem;
+      }
+      html .swal2-container .swal2-popup,
+        html .swal2-success-circular-line-left,
+        html .swal2-success-circular-line-right,
+        html .swal2-success-fix {
+        background: var(--arka);
       }
     </style>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/sweetalert2/11.10.8/sweetalert2.all.min.js" integrity="sha512-ziDG00v9lDjgmzxhvyX5iztPHpSryN/Ct/TAMPmMmS2O3T1hFPRdrzVCSvwnbPbFNie7Yg5mF7NUSSp5smu7RA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
