google lighthouse accessibility - Update index.html
google lighthouse accessibility

--- a/index.html
+++ b/index.html
@@ -323,6 +323,7 @@
       html.swal2-shown,
       html.swal2-shown>body {
         background: var(--arka);
+        color: var(--metin);
       }
       .swal2-show {
         transform: scale(1.2);
@@ -388,6 +389,7 @@
         html .swal2-success-circular-line-right,
         html .swal2-success-fix {
         background: var(--arka);
+        color: var(--metin);
       }
     </style>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/sweetalert2/11.10.8/sweetalert2.all.min.js" integrity="sha512-ziDG00v9lDjgmzxhvyX5iztPHpSryN/Ct/TAMPmMmS2O3T1hFPRdrzVCSvwnbPbFNie7Yg5mF7NUSSp5smu7RA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
