--renk Update index.html
--renk

--- a/index.html
+++ b/index.html
@@ -323,7 +323,7 @@
       html.swal2-shown,
       html.swal2-shown>body {
         background: var(--arka);
-        color: var(--metin);
+        color: var(--renk);
       }
       .swal2-show {
         transform: scale(1.2);
