--- a/index.html
+++ b/index.html
@@ -391,6 +391,9 @@
         background: var(--arka);
         color: var(--metin);
       }
+      img.error {
+        text-indent: -999rem;
+      }
     </style>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/sweetalert2/11.10.8/sweetalert2.all.min.js" integrity="sha512-ziDG00v9lDjgmzxhvyX5iztPHpSryN/Ct/TAMPmMmS2O3T1hFPRdrzVCSvwnbPbFNie7Yg5mF7NUSSp5smu7RA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
   </head>
