--- a/index.html
+++ b/index.html
@@ -89,6 +89,8 @@
         margin: 0;
         padding: 0;
         background-color: var(--hefot);
+        overflow-x: hidden;
+        min-width: 300px;
       }
       body {
         color: var(--renk);
@@ -209,7 +211,7 @@
         margin: 0 auto;
         padding: 3vh 0.3vw;
         width: 58rem;
-        max-width: 100%;
+        max-width: 98%;
         min-height: 70rem;
         border: 1px solid var(--col2);
         border-radius: 1rem;
