--- a/index.html
+++ b/index.html
@@ -393,7 +393,9 @@
         background: var(--arka);
         color: var(--metin);
       }
-      img.error {
+      #oyunlink {
+        text-decoration: none;
+        color: transparent;
         text-indent: -999rem;
       }
     </style>
