--- a/index.html
+++ b/index.html
@@ -420,7 +420,7 @@
         </div>
         <details class="about">
           <summary>Hakkında</summary>
-          <p>Veriler herkese açık olarak yayınlanan <a href="https://web.archive.org/web/20240000000000*/https://www.terorarananlar.pol.tr/tarananlar/" rel="noopener" target="_blank">T.C. İçişleri Bakanlığı Terör Arananlar</a> listesinden alınmaktadır. Sivillerin fotoğrafları yapay zeka ile insan fotoğrafı üreten <a href="https://web.archive.org/web/20240308002349/https://thispersondoesnotexist.com/" rel="noopener" target="_blank">thispersondoesnotexist.com</a> adresinden alınmaktadır.</p>
+          <p>Veriler herkese açık olarak yayınlanan <a href="https://web.archive.org/web/20240000000000*/https://www.terorarananlar.pol.tr/tarananlar/" rel="noopener" target="_blank">T.C. İçişleri Bakanlığı Terör Arananlar</a> listesinden alınmaktadır. Sivillerin fotoğrafları yapay zeka ile insan fotoğrafı üreten <a href="https://wolkanca.com/olmayan-bir-kisi-fotografi-olusturmak/">thispersondoesnotexist.com</a> adresinden alınmaktadır.</p>
         </details>
         <a class="opyls" href="https://wolkanca.com/terorist-tanima-terorist-testi-oyunu-terorist-quiz/#paylas">Paylaş</a>
       </div>
@@ -534,7 +534,7 @@
         l.substring(0, l.length - 1);
         s.innerHTML = `<a class="michaelsikkofield" onclick="checkAnswer('${e}','${e}')" href="javascript://" title="michaelsikkofield fix">🐺</a>
 				<div class="image-container">
-					<a id="oyunlink" title="Fotoğraf bozuk ise üsteki 🐺 butonuna tıkla" href="#trr">
+					<a id="oyunlink" title="Fotoğraf bozuk ise üsteki 🐺 butonuna tıkla" href="https://wolkanca.com/terorist-tanima-terorist-testi-oyunu-terorist-quiz/#oyun">
 						<img decoding="async" src="${c}" height="300" width="580" id="trrimg" style="--background: url('${l}')" onerror="this.onerror=null;this.classList.add('error');this.src='${c}?'" alt="${h}"/>
 					</a>
 				</div>
