canonical wolkanca Update index.html
canonical !wolkanca redirect.

--- a/index.html
+++ b/index.html
@@ -615,7 +615,7 @@
 
       /* canonical */
       let ref = document.referrer, canonical = document.querySelector("link[rel='canonical']").getAttribute("href");
-        if (!ref || !ref.match(/github/)) {
+        if (!ref || !ref.match(/wolkanca/)) {
         window.location.href = canonical;
       }
       /* canonical */
